--- a/templates/search-availability.page.tmpl
+++ b/templates/search-availability.page.tmpl
@@ -1,21 +1,20 @@
-{{ template "base" }}
+{{ template "base" .}}
 {{ define "content" }}
 <div class="container">
   <div class="row">
     <div class="col-md-6 mx-auto">
-      <h1 class="mt-5">
-        Search for Availability
-      </h1>
-      <form action="/reservation" method="get" class="needs-validation" novalidate>
+      <h1 class="mt-5">Search for Availability</h1>
+      <form action="/search-availability" method="post" class="needs-validation" novalidate>
+        <input type="hidden" name="csrf_token" value="{{ .CSRFToken }}" />
         <div class="row" id="reservation-dates">
           <div class="col">
-            <input required class="form-control" type="text" name="start" placeholder="arrival">
+            <input required class="form-control" type="text" name="start" placeholder="arrival" />
           </div>
           <div class="col">
-            <input required class="form-control" type="text" name="end" placeholder="departure">
+            <input required class="form-control" type="text" name="end" placeholder="departure" />
           </div>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Search Availability</button>
       </form>
     </div>
   </div>
@@ -23,8 +22,8 @@
 {{ end }}
 {{ define "js" }}
 <script>
-  document.addEventListener('DOMContentLoaded', function () {
-    const elem = document.getElementById('reservation-dates');
+  document.addEventListener("DOMContentLoaded", function () {
+    const elem = document.getElementById("reservation-dates");
     const rangepicker = new DateRangePicker(elem, {
       format: "yyyy-mm-dd",
     });
